# finki-exercises

./: README.md
OOP_2026/: CMakeLists.txt
OOP_2026/OLIVER_ZADACI/: z1.cpp  z10.cpp  z11.cpp  z12.cpp  z13.cpp  z14.cpp  z15.cpp  z16.cpp  z17.cpp  z18.cpp  z19.cpp  z2.cpp  z20.cpp  z21.cpp  z22.cpp  z23.cpp  z24.cpp  z25.cpp  z26.cpp  z27.cpp  z28.cpp  z29.cpp  z3.cpp  z30.cpp  z31.cpp  z32.cpp  z33.cpp  z34.cpp  z35.cpp  z36.cpp  z37.cpp  z38.cpp  z39.cpp  z4.cpp  z40.cpp  z41.cpp  z42.cpp  z43.cpp  z44.cpp  z45.cpp  (+43 more)
SP_2025/: CMakeLists.txt  main.cpp
SP_2025/KODAKADEMI/: s1.cpp  s10.cpp  s11.cpp  s12.cpp  s13.cpp  s14.cpp  s15.cpp  s16.cpp  s17.cpp  s18.cpp  s19.cpp  s2.cpp  s20.cpp  s3.cpp  s4.cpp  s5.cpp  s6.cpp  s7.cpp  s8.cpp  s9.cpp
SP_2025/aud10/: zda1.cpp  zda2.cpp
SP_2025/aud8/: z1.cpp  z2.cpp  z3.cpp  z4.cpp  z5.cpp  z6.cpp  z7.cpp  z8.cpp  z9.cpp
SP_2025/aud9/: zd1.cpp  zd2.cpp  zd3.cpp  zd4.cpp  zd5.cpp  zd6.cpp
SP_2025/junski_ispid/: 1.cpp  10.cpp  2.cpp  4.cpp  5.cpp  8.cpp  9.cpp
SP_2025/kolok1/: 1kol.cpp
SP_2025/od_kaj_Oliver/: zad1.cpp  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad16.cpp  zad17.cpp  zad18.cpp  zad19.cpp  zad2.cpp  zad20.cpp  zad21.cpp  zad22.cpp  zad23.cpp  zad24.cpp  zad25.cpp  zad26.cpp  zad27.cpp  zad28.cpp  zad29.cpp  zad3.cpp  zad30.cpp  zad31.cpp  zad32.cpp  zad33.cpp  zad34.cpp  zad35.cpp  zad36.cpp  zad37.cpp  zad38.cpp  zad39.cpp  zad4.cpp  zad40.cpp  zad41.cpp  zad42.cpp  zad43.cpp  zad44.cpp  zad45.cpp  (+45 more)
SP_2025/posl2denaispid/: A1.cpp  A10.cpp  A11.cpp  A12.cpp  A13.cpp  A14.cpp  A15.cpp  A16.cpp  A17.cpp  A18.cpp  A19.cpp  A2.cpp  A20.cpp  A21.cpp  A22.cpp  A23.cpp  A24.cpp  A25.cpp  A3.cpp  A4.cpp  A5.cpp  A6.cpp  A7.cpp  A8.cpp  A9.cpp
