cmake_minimum_required(VERSION 4.0)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp)


add_executable(z1 OLIVER_ZADACI/z1.cpp)
add_executable(z2 OLIVER_ZADACI/z2.cpp)
add_executable(z3 OLIVER_ZADACI/z3.cpp)
add_executable(z4 OLIVER_ZADACI/z4.cpp)
add_executable(z5 OLIVER_ZADACI/z5.cpp)
add_executable(z6 OLIVER_ZADACI/z6.cpp)
add_executable(z7 OLIVER_ZADACI/z7.cpp)
add_executable(z8 OLIVER_ZADACI/z8.cpp)
add_executable(z9 OLIVER_ZADACI/z9.cpp)
add_executable(z10 OLIVER_ZADACI/z10.cpp)
add_executable(z11 OLIVER_ZADACI/z11.cpp)
add_executable(z12 OLIVER_ZADACI/z12.cpp)
add_executable(z13 OLIVER_ZADACI/z13.cpp)
add_executable(z14 OLIVER_ZADACI/z14.cpp)
add_executable(z15 OLIVER_ZADACI/z15.cpp)
add_executable(z16 OLIVER_ZADACI/z16.cpp)
add_executable(z17 OLIVER_ZADACI/z17.cpp)
add_executable(z18 OLIVER_ZADACI/z18.cpp)
add_executable(z19 OLIVER_ZADACI/z19.cpp)
add_executable(z20 OLIVER_ZADACI/z20.cpp)
add_executable(z21 OLIVER_ZADACI/z21.cpp)
add_executable(z22 OLIVER_ZADACI/z22.cpp)
add_executable(z23 OLIVER_ZADACI/z23.cpp)
add_executable(z24 OLIVER_ZADACI/z24.cpp)
add_executable(z25 OLIVER_ZADACI/z25.cpp)
add_executable(z26 OLIVER_ZADACI/z26.cpp)
add_executable(z27 OLIVER_ZADACI/z27.cpp)
add_executable(z28 OLIVER_ZADACI/z28.cpp)
add_executable(z29 OLIVER_ZADACI/z29.cpp)
add_executable(z30 OLIVER_ZADACI/z30.cpp)
add_executable(z31 OLIVER_ZADACI/z31.cpp)
add_executable(z32 OLIVER_ZADACI/z32.cpp)
add_executable(z33 OLIVER_ZADACI/z33.cpp)
add_executable(z34 OLIVER_ZADACI/z34.cpp)
add_executable(z35 OLIVER_ZADACI/z35.cpp)
add_executable(z36 OLIVER_ZADACI/z36.cpp)
add_executable(z37 OLIVER_ZADACI/z37.cpp)
add_executable(z38 OLIVER_ZADACI/z38.cpp)
add_executable(z39 OLIVER_ZADACI/z39.cpp)
add_executable(z40 OLIVER_ZADACI/z40.cpp)
add_executable(z41 OLIVER_ZADACI/z41.cpp)
add_executable(z42 OLIVER_ZADACI/z42.cpp)
add_executable(z43 OLIVER_ZADACI/z43.cpp)
add_executable(z44 OLIVER_ZADACI/z44.cpp)
add_executable(z45 OLIVER_ZADACI/z45.cpp)
add_executable(z46 OLIVER_ZADACI/z46.cpp)
add_executable(z47 OLIVER_ZADACI/z47.cpp)
add_executable(z48 OLIVER_ZADACI/z48.cpp)
add_executable(z49 OLIVER_ZADACI/z49.cpp)
add_executable(z50 OLIVER_ZADACI/z50.cpp)
add_executable(z51 OLIVER_ZADACI/z51.cpp)
add_executable(z52 OLIVER_ZADACI/z52.cpp)
add_executable(z53 OLIVER_ZADACI/z53.cpp)
add_executable(z54 OLIVER_ZADACI/z54.cpp)
add_executable(z55 OLIVER_ZADACI/z55.cpp)
add_executable(z56 OLIVER_ZADACI/z56.cpp)
add_executable(z57 OLIVER_ZADACI/z57.cpp)
add_executable(z58 OLIVER_ZADACI/z58.cpp)
add_executable(z59 OLIVER_ZADACI/z59.cpp)
add_executable(z60 OLIVER_ZADACI/z60.cpp)
add_executable(z61 OLIVER_ZADACI/z61.cpp)
add_executable(z62 OLIVER_ZADACI/z62.cpp)
add_executable(z63 OLIVER_ZADACI/z63.cpp)
add_executable(z64 OLIVER_ZADACI/z64.cpp)
add_executable(z65 OLIVER_ZADACI/z65.cpp)
add_executable(z66 OLIVER_ZADACI/z66.cpp)
add_executable(z67 OLIVER_ZADACI/z67.cpp)
add_executable(z68 OLIVER_ZADACI/z68.cpp)
add_executable(z69 OLIVER_ZADACI/z69.cpp)
add_executable(z70 OLIVER_ZADACI/z70.cpp)
add_executable(z71 OLIVER_ZADACI/z71.cpp)
add_executable(z72 OLIVER_ZADACI/z72.cpp)
add_executable(z73 OLIVER_ZADACI/z73.cpp)
add_executable(z74 OLIVER_ZADACI/z74.cpp)
add_executable(z75 OLIVER_ZADACI/z75.cpp)
add_executable(z76 OLIVER_ZADACI/z76.cpp)
add_executable(z77 OLIVER_ZADACI/z77.cpp)
add_executable(z78 OLIVER_ZADACI/z78.cpp)
add_executable(z79 OLIVER_ZADACI/z79.cpp)
add_executable(z80 OLIVER_ZADACI/z80.cpp)
add_executable(z81 OLIVER_ZADACI/z81.cpp)
add_executable(z82 OLIVER_ZADACI/z82.cpp)
add_executable(z83 OLIVER_ZADACI/z83.cpp)
add_executable(z84 OLIVER_ZADACI/z84.cpp)
add_executable(z85 OLIVER_ZADACI/z85.cpp)
add_executable(z86 OLIVER_ZADACI/z86.cpp)
add_executable(z87 OLIVER_ZADACI/z87.cpp)
add_executable(z88 OLIVER_ZADACI/z88.cpp)
add_executable(z89 OLIVER_ZADACI/z89.cpp)
add_executable(z90 OLIVER_ZADACI/z90.cpp)