cmake_minimum_required(VERSION 4.0)
project(SP_2025)

set(CMAKE_CXX_STANDARD 20)

add_executable(SP_2025 main.cpp)

add_executable(1kol kolok1/1kol.cpp)
add_executable(2kol kolok1/2kol.cpp)


add_executable(zad1 od_kaj_Oliver/zad1.cpp)
add_executable(zad2 od_kaj_Oliver/zad2.cpp)
add_executable(zad3 od_kaj_Oliver/zad3.cpp)
add_executable(zad4 od_kaj_Oliver/zad4.cpp)
add_executable(zad5 od_kaj_Oliver/zad5.cpp)
add_executable(zad6 od_kaj_Oliver/zad6.cpp)
add_executable(zad7 od_kaj_Oliver/zad7.cpp)
add_executable(zad8 od_kaj_Oliver/zad8.cpp)
add_executable(zad9 od_kaj_Oliver/zad9.cpp)
add_executable(zad10 od_kaj_Oliver/zad10.cpp)
add_executable(zad11 od_kaj_Oliver/zad11.cpp)
add_executable(zad12 od_kaj_Oliver/zad12.cpp)
add_executable(zad13 od_kaj_Oliver/zad13.cpp)
add_executable(zad14 od_kaj_Oliver/zad14.cpp)
add_executable(zad15 od_kaj_Oliver/zad15.cpp)
add_executable(zad16 od_kaj_Oliver/zad16.cpp)
add_executable(zad17 od_kaj_Oliver/zad17.cpp)
add_executable(zad18 od_kaj_Oliver/zad18.cpp)
add_executable(zad19 od_kaj_Oliver/zad19.cpp)
add_executable(zad20 od_kaj_Oliver/zad20.cpp)
add_executable(zad21 od_kaj_Oliver/zad21.cpp)
add_executable(zad22 od_kaj_Oliver/zad22.cpp)
add_executable(zad23 od_kaj_Oliver/zad23.cpp)
add_executable(zad24 od_kaj_Oliver/zad24.cpp)
add_executable(zad25 od_kaj_Oliver/zad25.cpp)
add_executable(zad26 od_kaj_Oliver/zad26.cpp)
add_executable(zad27 od_kaj_Oliver/zad27.cpp)
add_executable(zad28 od_kaj_Oliver/zad28.cpp)
add_executable(zad29 od_kaj_Oliver/zad29.cpp)
add_executable(zad30 od_kaj_Oliver/zad30.cpp)
add_executable(zad31 od_kaj_Oliver/zad31.cpp)
add_executable(zad32 od_kaj_Oliver/zad32.cpp)
add_executable(zad33 od_kaj_Oliver/zad33.cpp)
add_executable(zad34 od_kaj_Oliver/zad34.cpp)
add_executable(zad35 od_kaj_Oliver/zad35.cpp)
add_executable(zad36 od_kaj_Oliver/zad36.cpp)
add_executable(zad37 od_kaj_Oliver/zad37.cpp)
add_executable(zad38 od_kaj_Oliver/zad38.cpp)
add_executable(zad39 od_kaj_Oliver/zad39.cpp)
add_executable(zad40 od_kaj_Oliver/zad40.cpp)
add_executable(zad41 od_kaj_Oliver/zad41.cpp)
add_executable(zad42 od_kaj_Oliver/zad42.cpp)
add_executable(zad43 od_kaj_Oliver/zad43.cpp)
add_executable(zad44 od_kaj_Oliver/zad44.cpp)
add_executable(zad45 od_kaj_Oliver/zad45.cpp)
add_executable(zad46 od_kaj_Oliver/zad46.cpp)
add_executable(zad47 od_kaj_Oliver/zad47.cpp)
add_executable(zad48 od_kaj_Oliver/zad48.cpp)
add_executable(zad49 od_kaj_Oliver/zad49.cpp)
add_executable(zad50 od_kaj_Oliver/zad50.cpp)
add_executable(zad51 od_kaj_Oliver/zad51.cpp)
add_executable(zad52 od_kaj_Oliver/zad52.cpp)
add_executable(zad53 od_kaj_Oliver/zad53.cpp)
add_executable(zad54 od_kaj_Oliver/zad54.cpp)
add_executable(zad55 od_kaj_Oliver/zad55.cpp)
add_executable(zad56 od_kaj_Oliver/zad56.cpp)
add_executable(zad57 od_kaj_Oliver/zad57.cpp)
add_executable(zad58 od_kaj_Oliver/zad58.cpp)
add_executable(zad59 od_kaj_Oliver/zad59.cpp)
add_executable(zad60 od_kaj_Oliver/zad60.cpp)
add_executable(zad61 od_kaj_Oliver/zad61.cpp)
add_executable(zad62 od_kaj_Oliver/zad62.cpp)
add_executable(zad63 od_kaj_Oliver/zad63.cpp)
add_executable(zad64 od_kaj_Oliver/zad64.cpp)
add_executable(zad65 od_kaj_Oliver/zad65.cpp)
add_executable(zad66 od_kaj_Oliver/zad66.cpp)
add_executable(zad67 od_kaj_Oliver/zad67.cpp)
add_executable(zad68 od_kaj_Oliver/zad68.cpp)
add_executable(zad69 od_kaj_Oliver/zad69.cpp)
add_executable(zad70 od_kaj_Oliver/zad70.cpp)
add_executable(zad71 od_kaj_Oliver/zad71.cpp)
add_executable(zad72 od_kaj_Oliver/zad72.cpp)
add_executable(zad73 od_kaj_Oliver/zad73.cpp)
add_executable(zad74 od_kaj_Oliver/zad74.cpp)
add_executable(zad75 od_kaj_Oliver/zad75.cpp)
add_executable(zad76 od_kaj_Oliver/zad76.cpp)
add_executable(zad77 od_kaj_Oliver/zad77.cpp)
add_executable(zad78 od_kaj_Oliver/zad78.cpp)
add_executable(zad79 od_kaj_Oliver/zad79.cpp)
add_executable(zad80 od_kaj_Oliver/zad80.cpp)
add_executable(zad81 od_kaj_Oliver/zad81.cpp)
add_executable(zad82 od_kaj_Oliver/zad82.cpp)
add_executable(zad83 od_kaj_Oliver/zad83.cpp)
add_executable(zad84 od_kaj_Oliver/zad84.cpp)
add_executable(zad85 od_kaj_Oliver/zad85.cpp)




add_executable(z1 aud8/z1.cpp)
add_executable(z2 aud8/z2.cpp)
add_executable(z3 aud8/z3.cpp)
add_executable(z4 aud8/z4.cpp)
add_executable(z5 aud8/z5.cpp)
add_executable(z6 aud8/z6.cpp)
add_executable(z7 aud8/z7.cpp)
add_executable(z8 aud8/z8.cpp)
add_executable(z9 aud8/z9.cpp)

add_executable(zd1 aud9/zd1.cpp)
add_executable(zd2 aud9/zd2.cpp)
add_executable(zd3 aud9/zd3.cpp)
add_executable(zd4 aud9/zd4.cpp)
add_executable(zd5 aud9/zd5.cpp)
add_executable(zd6 aud9/zd6.cpp)

add_executable(zda1 aud10/zda1.cpp)
add_executable(zda2 aud10/zda2.cpp)
add_executable(zda3 aud10/zda3.cpp)
add_executable(zda4 aud10/zda4.cpp)
add_executable(zda5 aud10/zda5.cpp)

add_executable(A1 posl2denaispid/A1.cpp)
add_executable(A2 posl2denaispid/A2.cpp)
add_executable(A3 posl2denaispid/A3.cpp)
add_executable(A4 posl2denaispid/A4.cpp)
add_executable(A5 posl2denaispid/A5.cpp)
add_executable(A6 posl2denaispid/A6.cpp)
add_executable(A7 posl2denaispid/A7.cpp)
add_executable(A8 posl2denaispid/A8.cpp)
add_executable(A9 posl2denaispid/A9.cpp)
add_executable(A10 posl2denaispid/A10.cpp)
add_executable(A11 posl2denaispid/A11.cpp)
add_executable(A12 posl2denaispid/A12.cpp)
add_executable(A13 posl2denaispid/A13.cpp)
add_executable(A14 posl2denaispid/A14.cpp)
add_executable(A15 posl2denaispid/A15.cpp)
add_executable(A16 posl2denaispid/A16.cpp)
add_executable(A17 posl2denaispid/A17.cpp)
add_executable(A18 posl2denaispid/A18.cpp)
add_executable(A19 posl2denaispid/A19.cpp)
add_executable(A20 posl2denaispid/A20.cpp)
add_executable(A21 posl2denaispid/A21.cpp)
add_executable(A22 posl2denaispid/A22.cpp)
add_executable(A23 posl2denaispid/A23.cpp)
add_executable(A24 posl2denaispid/A24.cpp)
add_executable(A25 posl2denaispid/A25.cpp)

add_executable(s1 KODAKADEMI/s1.cpp)
add_executable(s2 KODAKADEMI/s2.cpp)
add_executable(s3 KODAKADEMI/s3.cpp)
add_executable(s4 KODAKADEMI/s4.cpp)
add_executable(s5 KODAKADEMI/s5.cpp)
add_executable(s6 KODAKADEMI/s6.cpp)
add_executable(s7 KODAKADEMI/s7.cpp)
add_executable(s8 KODAKADEMI/s8.cpp)
add_executable(s9 KODAKADEMI/s9.cpp)
add_executable(s10 KODAKADEMI/s10.cpp)
add_executable(s11 KODAKADEMI/s11.cpp)
add_executable(s12 KODAKADEMI/s12.cpp)
add_executable(s13 KODAKADEMI/s13.cpp)
add_executable(s14 KODAKADEMI/s14.cpp)
add_executable(s15 KODAKADEMI/s15.cpp)
add_executable(s16 KODAKADEMI/s16.cpp)
add_executable(s17 KODAKADEMI/s17.cpp)
add_executable(s18 KODAKADEMI/s18.cpp)
add_executable(s19 KODAKADEMI/s19.cpp)
add_executable(s20 KODAKADEMI/s20.cpp)



add_executable(1 junski_ispid/1.cpp)
add_executable(2 junski_ispid/2.cpp)
add_executable(3 junski_ispid/3.cpp)
add_executable(4 junski_ispid/4.cpp)
add_executable(5 junski_ispid/5.cpp)
add_executable(6 junski_ispid/6.cpp)
add_executable(7 junski_ispid/7.cpp)
add_executable(8 junski_ispid/8.cpp)
add_executable(9 junski_ispid/9.cpp)
add_executable(10 junski_ispid/10.cpp)

